# advent-2024

./: .gitignore  Cargo.toml  aoc.nu
src/: cli.rs  error.rs  lib.rs  main.rs
src/instrument/: instrumentation.rs
src/solutions/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  utils.rs
