[package]
name = "advent_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
